# UniDec

./: .dockerignore  .gitignore  CDPres.py  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  GUniDec.py  GUniDec.spec  LICENSE  Launcher.py  UniChrom.py  UniChrom2.py  build.bat  datacollector.py  import_wizard.py  installer.bat  readme.md  requirements.txt  setup.py  setupdocker.py  test_GUI.py  test_UniDec.py  unidec.py
LipiDec/Infusion/: LipiDecEng.py  LipiDec_DataBaseGenerator.py  ShotgunLipiDec.py  ShotgunLipiDecMTM.py
PublicScripts/: example_single_run.py  hdf5_to_mzml.py  waters_precursor_fixer.py
PublicScripts/DIA-PTCR/: glyco_translator.py
PublicScripts/FPOP/: FPOP_Averager.py  FPOP_Statistics.py  Footprinting Data Analyzer.py
PublicScripts/IsoDec/: lcms_file_processing.py  single_spectrum_processing.py
PublicScripts/Lipids/: FixPGinMSP.py  LipidFragPrediction.py  LipidFunctions.py  LipidOutlierAnalysis.py  LipidOutlierTestScript.py  Lipid_DDA_Dataset_Compare.py  RT_Correction.py  SkylineResultsPlotter.py  TransitionListAssignment.py  mzmine_translator.py
PublicScripts/Multiplexing/: DMT_Merge.py  DMT_Merge_Subsets.py  HTswitch2.ino
PublicScripts/MutantCycleAnalysis/: Step1_ListExtractor.py  Step2_DeltaGToolWithErrorBars.py  Step3_VantHoffAnalysis.py  Step4_DoubleMutantCyclePlot.py
PublicScripts/TopDownAnalysis/: TopDownMS1.py
PublicScripts/UNIGLAMS/: Merged Glycan List.csv  glyco_merger.py
iFAMS/: GuiTestFun.py  README v5.1.txt  iFAMS_V5_GUI.py  iFAMSfun.py  test.txt  wxiFAMS.py  wxiFAMS_readme.txt
iFAMS/pyqtgraph/: debug.py
metaunidec/: image_plotter.py  imzml_reader.py  metafft.py  mudeng.py  mudhelp.py  mudpres.py  mudstruct.py  mudview.py  test_MUD.py  ultrameta.py
metaunidec/gui_elements/: list_ctrls.py  ud_cont_meta.py  ud_menu_meta.py  um_list_ctrl.py
metaunidec/meta_import_wizard/: MetaTagTypes.py  meta_data_importer.py  meta_import_wizard.py  meta_import_wizard_grid.py  meta_import_wizard_treectrl.py
unidec/: DataCollector.py  GUniDec.py  ImportWizard.py  Launcher.py  MetaUniDec.py  Rwrapper.R  UPP.py  UniChrom.py  UniChromCD.py  UniDecCD.py  UniDecHT.py  __init__.py  __main__.py  batch.py  engine.py  tools.py
unidec/IsoDec/: IsoDecGUI.py  __main__.py  altdecon.py  c_interface.py  compare_tools.py  datatools.py  encoding.py  engine.py  example_single_run.py  generate.py  isodec_test  isodeclib.lib  isofft.lib  isogen.lib  isogenmass.lib  isogenwrapper.py  match.py  models.py  msalign_export.py  phase_model.pth  phase_model_1.pth  phase_model_2.pth  phase_model_4.pth  phase_model_8.pth  plots.py  runtime.py  train.py  trainingdata.py
unidec/IsoDec/src_cmake/: CMakeLists.txt  compilelinux.sh  fftw3.lib  find_avx.cmake  isodec_test.cpp  isodeclib.c  isodeclib.h  isofft.c  isofft.h  isofft_test.c  isogen.cpp  isogen_rnaveragine_model128.h  isogen_rnaveragine_model32.h  isogen_rnaveragine_model64.h  isogen_test.cpp  isogen_weights.h  isogenatom.c  isogenatom.h  isogendep.c  isogendep.h  isogenmass.c  isogenmass.h  isogenmass_model_128.h  isogenmass_model_32.h  isogenmass_model_64.h  isogenmass_model_8.h  isogenpep.c  isogenpep.h  isogenpep_model.h  isogenpep_model_128.h  isogenpep_model_16.h  isogenpep_model_64.h  isogenprot_model.h  isogenrna.c  isogenrna.h  isogenrna_model_128.h  isogenrna_model_64.h  phase_model_4.h
unidec/LipiDec/: AddFeaturestoDF.py
unidec/UniDecImporter/: FileParser.py  ImportTests.py  ImportTools.py  Importer.py  ImporterFactory.py  SingleScanImporter.py  __init__.py
unidec/iFAMS/: GuiTestFun.py  iFAMSfun.py  wxiFAMS.py  wxiFAMS_readme.txt
unidec/metaunidec/: image_plotter.py  imzml_reader.py  metafft.py  mudeng.py  mudhelp.py  mudstruct.py  mudview.py  ultrameta.py
unidec/modules/: AutocorrWindow.py  CDCal.py  CDEng.py  ChromEng.py  ColorPlot.py  DoubleDec.py  Extract2D.py  GridDecon.py  HTEng.py  IM_functions.py  IM_windows.py  ManualSelectionWindow.py  MassDefectExtractor.py  MassDefects.py  MassFitter.py  MassSpecBuilder.py  NanodiscBuilder.py  PlotAnimations.py  PlotBase.py  PlottingWindow.py  SubDiv.py  UniFit.py  UniList.py  __init__.py  biopolymertools.py  data_reader.py  fft_window.py  fitting.py  fwhmtools.py  hdf5_tools.py  hramtools.py  html_writer.py  i2ms_importer.py  isotopetools.py  mainwindow.py  masstools.py  matchtools.py  miscwindows.py  mzMLimporter.py  mzXML_importer.py  (+16 more)
unidec/src/: CMakeLists.txt  MetaUniDec_Main.c  MetaUniDec_Main.h  UD_H5_IO.h  UD_IO.h  UD_analysis.c  UD_analysis.h  UD_charge.c  UD_charge.h  UD_conv.c  UD_conv.h  UD_dataproc.c  UD_dataproc.h  UD_score.c  UD_score.h  UD_sg.h  UniDec.c  UniDec.h  UniDec.sln  UniDec.vcxproj  UniDecCD_Main.c  UniDecCD_Main.h  UniDecIM.c  UniDecIM.h  UniDecIM_Main.c  UniDecIM_Main.h  UniDecLC_Main.h  UniDec_Main.h  compilelinux.sh  compilemac.sh  compilewin.bat  copy.bat  h5io.c  h5io.h  icc_comp.sh  linux_dependencies.sh  load_modules.sh  rcpp_unidec.cpp  test_match.bat  udcore.c  (+11 more)
unidec/src/Archive/: UD_match.h
unidec_bin/: mass_table.csv  unidecmac  unimod.sqlite
unidec_bin/Example Data/: GroEL HCD UniDec.txt
unidec_doc/: Doxyfile
unidec_doc/html/: ____init_____8py.html  _autocorr_window_8py.html  _color_plot_8py.html  _extract2_d_8py.html  _file_dialogs_8py.html  _g_uni_dec_8py.html  _i_m__functions_8py.html  _i_m__windows_8py.html  _importer_progress_gauge_8py.html  _manual_selection_window_8py.html  _mass_defects_8py.html  _mass_fitter_8py.html  (+1946 more)
unidec_modules/: AutocorrWindow.py  CDCal.py  CDEng.py  ChromEng.py  ColorPlot.py  DoubleDec.py  Extract2D.py  GridDecon.py  IM_functions.py  IM_windows.py  ManualSelectionWindow.py  MassDefectExtractor.py  MassDefects.py  MassFitter.py  MassSpecBuilder.py  NanodiscBuilder.py  PlotAnimations.py  PlotBase.py  PlottingWindow.py  SubDiv.py  UniFit.py  UniList.py  auto_peak.py  data_reader.py  fft_window.py  fitting.py  hdf5_tools.py  html_writer.py  i2ms_importer.py  isotopetools.py  mainwindow.py  masstools.py  matchtools.py  miscwindows.py  mzMLimporter.py  mzXML_importer.py  mzmlparse_auto.py  nativez.py  peaklistsort.py  peakstructure.py  (+10 more)
unidec_src/: linux_dependencies.sh
(+1311 files in other folders)
